--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                 <use xlink:href="#icon-gitee"></use>
               </svg>
             </a>
-            <a href="http://github.com" target="_blank">
+            <a href="https://github.com/banxxx/curriculumvitae" target="_blank">
               <svg class="icon footer__social" aria-hidden="true">
                 <use xlink:href="#icon-github"></use>
               </svg>
