--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </a>
 
               <a
-                href="https://github.com/banxxx/curriculumvitae"
+                href="https://github.com/banxxx"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -216,9 +216,7 @@
 
           <div class="about__data">
             <p class="about__description" i18n="about__description">
-              Web developer, with extensive knowledge and years of experience,
-              working in web technologies and Ui / Ux design, delivering quality
-              work.
+              JAVA developers with rich knowledge and years of experience are engaged in JAVA development work and provide high-quality work.
             </p>
 
             <div class="about__info">
@@ -231,7 +229,7 @@
               </div>
 
               <div>
-                <span class="about__info-title">09+</span>
+                <span class="about__info-title">10+</span>
                 <span class="about__info-name" i18n="about__info-name2"
                   >Completed <br />
                   projects</span
@@ -280,7 +278,7 @@
                     Frontend developer
                   </h1>
                   <span class="skills__subtitle" i18n="skills__years"
-                    >More than * years</span
+                    >More than 2 years</span
                   >
                 </div>
 
@@ -301,7 +299,7 @@
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">CSS</h3>
-                    <span class="skills__number">50%</span>
+                    <span class="skills__number">80%</span>
                   </div>
                   <div class="skills__bar">
                     <div class="skills__percentage skills__css"></div>
@@ -320,8 +318,8 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">VUE</h3>
-                    <span class="skills__number">60%</span>
+                    <h3 class="skills__name">VUE2</h3>
+                    <span class="skills__number">80%</span>
                   </div>
                   <div class="skills__bar">
                     <div class="skills__percentage skills__vue"></div>
@@ -331,7 +329,7 @@
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">VUE3</h3>
-                    <span class="skills__number">40%</span>
+                    <span class="skills__number">30%</span>
                   </div>
                   <div class="skills__bar">
                     <div class="skills__percentage skills__vue3"></div>
@@ -349,7 +347,7 @@
                     Backend developer
                   </h1>
                   <span class="skills__subtitle" i18n="skills__years2"
-                    >More than * years</span
+                    >More than 3 years</span
                   >
                 </div>
 
@@ -360,7 +358,7 @@
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Java</h3>
-                    <span class="skills__number">70%</span>
+                    <span class="skills__number">90%</span>
                   </div>
                   <div class="skills__bar">
                     <div class="skills__percentage skills__java"></div>
@@ -370,7 +368,7 @@
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Python</h3>
-                    <span class="skills__number">50%</span>
+                    <span class="skills__number">30%</span>
                   </div>
                   <div class="skills__bar">
                     <div class="skills__percentage skills__python"></div>
@@ -416,16 +414,16 @@
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title" i18n="qualification1__title">
-                    Computer Enginner
+                    Computer Application Technology 
                   </h3>
                   <span
                     class="qualification__subtitle"
                     i18n="qualification1__subtitle"
-                    >**** - University</span
+                    >Wuhan University Of Science And Technology</span
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2019 - 2023
+                    2017 - 2020
                   </div>
                 </div>
 
@@ -453,7 +451,7 @@
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2022.12-2023
+                    2021-2023
                   </div>
                 </div>
               </div>
@@ -470,7 +468,7 @@
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2023 - ...
+                    2021 - 2023
                   </div>
                 </div>
 
@@ -487,7 +485,7 @@
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
-                  <!-- <span class="qualification__line"></span> -->
+                  <span class="qualification__line"></span>
                 </div>
                 <div>
                   <h3 class="qualification__title" i18n="qualification4__title">
@@ -500,8 +498,36 @@
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2022
+                    2019.6-2022.6
                   </div>
+                </div>
+              </div>
+              <!--==================== QUALIFICATION 2 ====================-->
+              <div class="qualification__data">
+                <!-- <div></div> -->
+                <!-- <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div> -->
+
+                <div>
+                  <h3 class="qualification__title" i18n="qualification4__title">
+                    Software Enginner
+                  </h3>
+                  <span
+                    class="qualification__subtitle"
+                    i18n="qualification5__subtitle"
+                    >WuHan</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2022.6-2023.11
+                  </div>
+                </div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <!-- <span class="qualification__line"></span> -->
                 </div>
               </div>
             </div>
@@ -522,21 +548,20 @@
 
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="assets/img/portfolio1.jpg"
+                src="assets/img/portfolio4.jpg"
                 alt=""
                 class="portfolio__img"
               />
 
               <div class="portfolio_">
                 <h3 class="portfolio__title" i18n="portfolio1__title">
-                  Modern Website
+                  Project 1
                 </h3>
                 <p
                   class="portfolio__description"
                   i18n="portfolio1__description"
                 >
-                  Website adaptable to all devices, with ui components and
-                  animated interactions.
+                  An integrated platform for students' online learning, problem-solving, and exams, with a web backend, app end, and H5 end display.
                 </p>
                 <a
                   href="https://gitee.com/banxx/projects"
@@ -553,21 +578,20 @@
 
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="assets/img/portfolio2.jpg"
+                src="assets/img/portfolio5.jpg"
                 alt=""
                 class="portfolio__img"
               />
 
               <div class="portfolio_">
                 <h3 class="portfolio__title" i18n="portfolio2__title">
-                  Modern Website
+                  Project 2
                 </h3>
                 <p
                   class="portfolio__description"
                   i18n="portfolio2__description"
                 >
-                  Website adaptable to all devices, with ui components and
-                  animated interactions.
+                  Online novel reading platform,backend monitoring of novel management,and app display of online reading for users.
                 </p>
                 <a
                   href="https://gitee.com/banxx/projects"
@@ -584,21 +608,20 @@
 
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="assets/img/portfolio3.jpg"
+                src="assets/img/portfolio6.jpg"
                 alt=""
                 class="portfolio__img"
               />
 
               <div class="portfolio_">
                 <h3 class="portfolio__title" i18n="portfolio3__title">
-                  Modern Website
+                  Project 3
                 </h3>
                 <p
                   class="portfolio__description"
                   i18n="portfolio3__description"
                 >
-                  Website adaptable to all devices, with ui components and
-                  animated interactions.
+                  Multi merchant and multi authority logistics management platform,real-time monitoring of logistics trends,and summary of logistics reports.
                 </p>
                 <a
                   href="https://gitee.com/banxx/projects"
@@ -660,9 +683,9 @@
               <i class="uil uil-map-marker contact__icon"></i>
 
               <div>
-                <h3 class="contact__title" i18n="location">Location</h3>
+                <h3 class="contact__title" i18n="location">Domicile</h3>
                 <span class="contatc__subtitle" i18n="location__detail"
-                  >HuNan , CHN</span
+                  >HuBei , CHN</span
                 >
               </div>
             </div>
@@ -678,7 +701,7 @@
           <div>
             <h1 class="footer__title">Banxx</h1>
             <span class="footer__subtitle" i18n="home__subtitle"
-              >Backend developers</span
+              >Backend developer</span
             >
           </div>
 
@@ -702,7 +725,7 @@
                 <use xlink:href="#icon-gitee"></use>
               </svg>
             </a>
-            <a href="https://github.com/banxxx/curriculumvitae" target="_blank">
+            <a href="https://github.com/banxxx" target="_blank">
               <svg class="icon footer__social" aria-hidden="true">
                 <use xlink:href="#icon-github"></use>
               </svg>
