--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="#blog" class="nav__link">
+              <a href="https://blog.banxx.cn" target="_blank" class="nav__link">
                 <i class="uil uil-message nav__icon"></i>
                 <p i18n="blog">Blog</p>
               </a>
